@@ -27,6 +27,11 @@ Changes
 Fixes
 =====
 
+ - Fixed a regression causing incorrect results for queries with ``DISTINCT``
+   on scalar functions. E.g.::
+
+     SELECT DISTINCT upper(name) FROM t
+
  - Fixed a race condition which made it possible to create new columns in a
    partition of a partitioned table that didn't match the type of the same
    column of sibling partitions.
@@ -36,11 +41,11 @@ Fixes
 
  - Fixed an issue where the user that gets provided by the client on connect is
    not always used as current user if host based authentication is disabled.
- 
+
  - Corrected the documentation of the ``version`` column of the ``sys.snapshots``
    table. It was described as the CrateDB version wereas it's an internal
    version instead.
- 
+
  - Dropping an empty partitioned table did not drop related table privileges.
 
  - Implemented ``NOT NULL`` constraint validation for nested object columns,
